[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/menu/torch_frames/torch8.png" type="Texture" id=1]
[ext_resource path="res://assets/menu/torch_frames/torch2.png" type="Texture" id=2]
[ext_resource path="res://assets/menu/torch_frames/torch4.png" type="Texture" id=3]
[ext_resource path="res://assets/menu/torch_frames/torch1.png" type="Texture" id=4]
[ext_resource path="res://assets/menu/torch_frames/torch6.png" type="Texture" id=5]
[ext_resource path="res://assets/menu/torch_frames/torch9.png" type="Texture" id=6]
[ext_resource path="res://assets/menu/torch_frames/torch7.png" type="Texture" id=7]
[ext_resource path="res://assets/menu/torch_frames/torch3.png" type="Texture" id=8]
[ext_resource path="res://assets/menu/pixelweentomb.png" type="Texture" id=9]
[ext_resource path="res://assets/menu/torch_frames/torch5.png" type="Texture" id=10]
[ext_resource path="res://scripts/Menus/menu.gd" type="Script" id=11]
[ext_resource path="res://assets/fonts/VPPixel-Simplified.otf" type="DynamicFontData" id=12]
[ext_resource path="res://assets/themes/main_brown_theme.tres" type="Theme" id=13]
[ext_resource path="res://assets/sounds/background-music.mp3" type="AudioStream" id=14]

[sub_resource type="DynamicFont" id=3]
size = 142
outline_size = 4
outline_color = Color( 0.121569, 0.121569, 0.121569, 1 )
font_data = ExtResource( 12 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 2 ), ExtResource( 8 ), ExtResource( 3 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 1 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 1 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 10 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "default invertido",
"speed": 5.0
} ]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 13 )
script = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="BackgroundImage" type="Sprite" parent="."]
position = Vector2( 511.75, 300 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.469
anchor_top = 0.573
anchor_right = 0.469
anchor_bottom = 0.573
margin_left = -48.256
margin_top = -23.8
margin_right = 115.744
margin_bottom = 281.2
theme = ExtResource( 13 )
custom_constants/separation = 10

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 164.0
margin_bottom = 49.0
theme = ExtResource( 13 )
text = "Start"

[node name="ControlsButton" type="Button" parent="VBoxContainer"]
margin_top = 59.0
margin_right = 164.0
margin_bottom = 108.0
theme = ExtResource( 13 )
text = "Controls"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 118.0
margin_right = 164.0
margin_bottom = 167.0
theme = ExtResource( 13 )
text = "Quit"

[node name="Tittle" type="Label" parent="."]
margin_left = 152.0
margin_top = 40.0
margin_right = 890.0
margin_bottom = 249.0
theme = ExtResource( 13 )
custom_colors/font_color = Color( 0.835294, 0.74902, 0.654902, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "DARK MAZE"

[node name="Torch1" type="AnimatedSprite" parent="."]
position = Vector2( 112, 128 )
scale = Vector2( 2, 2 )
frames = SubResource( 2 )
frame = 3
playing = true

[node name="Torch2" type="AnimatedSprite" parent="."]
position = Vector2( 928, 128 )
scale = Vector2( 2, 2 )
frames = SubResource( 2 )
animation = "default invertido"
frame = 3
playing = true
flip_h = true

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = 7.0
autoplay = true

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
